--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,13 @@
     <artifactId>web_crawler</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependency>
-        <!-- jsoup HTML parser library @ https://jsoup.org/ -->
-        <groupId>org.jsoup</groupId>
-        <artifactId>jsoup</artifactId>
-        <version>1.12.1</version>
-    </dependency>
-
+    <dependencies>
+        <dependency>
+            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.12.1</version>
+        </dependency>
+    </dependencies>
     
 </project>
